--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="nav">
           <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
           <ul class="my-menu">
-            <li><a class="nav-link" href="./index.html">Studio</a></li>
+            <li><a class="nav-link current" href="./index.html">Studio</a></li>
             <li><a class="nav-link" href="">Portfolio</a></li>
             <li><a class="nav-link" href="">Contacts</a></li>
           </ul>
