--- a/index.html
+++ b/index.html
@@ -85,6 +85,36 @@
           <h3 class="titlee">Daniel Wilson</h3> 
           <p class="team-p">UI Designer</p> </div> </li> 
          </ul>
+         <ul class="header-soc-list">
+         <li class="header-soc-item">
+          <a class="header-soc-link" href="" rel="noopener noreferrer">
+            <svg class="header-soc-icon" width="16" height="16">
+              <use href="./images/demo-external-svg.html#icon-instagram-2"></use>
+            </svg>
+          </a>
+         </li>
+         <li class="header-soc-item">
+         <a class="header-soc-link" href="" rel="noopener noreferrer">
+          <svg class="header-soc-icon" width="16" height="16">
+         <use href="./images/demo-external-svg.html#icon-twitter-1"></use>
+         </svg>
+         </a>
+         </li>
+         <li class="header-soc-item">
+         <a class="header-soc-link" href="" rel="noopener noreferrer">
+         <svg class="header-soc-icon" width="16" height="16">
+         <use href="./images/demo-external-svg.html#icon-facebook-1"></use>
+         </svg>
+         </a>
+         </li>
+          <li class="header-soc-item">
+            <a class="header-soc-link" href="" rel="noopener noreferrer">
+              <svg class="header-soc-icon" width="16" height="16">
+                <use href="./images/demo-external-svg.html#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+          </ul>
          </div>
         </section>
           <section class="portfolio">
