--- a/index.html
+++ b/index.html
@@ -128,10 +128,11 @@
         </section>
        </main>
        <footer class="footer">
+        <div class="container footer-container">
         <div class="container">
         <a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        
+        </div>
           <p class="text-footer-soc">Social media</p>
           <svg aria-hidden="true" style="position:absolute;width:0;height:0" xmlns="http://www.w3.org/2000/svg" overflow="hidden">
           <defs>
