--- a/index.html
+++ b/index.html
@@ -72,20 +72,139 @@
           <div class="employee-info">
           <h3 class="titlee">Mark Guerrero</h3> 
           <p class="team-p">Product Designer</p> </div> </li>
+          <ul class="icon-listt">
+            <li class="icon-itemm">
+              <a href="" class="icon-linkk">
+                <svg class="iconn" width="16" height="16">
+                  <use href="#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-itemm">
+              <a href="" class="icon-linkk">
+                <svg class="iconn" width="16" height="16">
+                  <use href="#twit"></use>
+                </svg>
+               </a>
+            </li>
+            <li class="icon-itemm">
+              <a href="" class="icon-linkk">
+                <svg class="iconn" width="16" height="16">
+                  <use href="#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-itemm">
+              <a href="" class="icon-linkk">
+                <svg class="iconn" width="16" height="16">
+                  <use href="#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
           <li class="bak"><img src="./images/img2.jpg" width="264" alt="men 2"> 
           <div class="employee-info">
           <h3 class="titlee">Tom Ford</h3> 
           <p class="team-p">Frontend Developer</p> </div> </li>
+          <ul class="icon-listt">
+            <li class="icon-itemm">
+              <a href="" class="icon-linkk">
+                <svg class="iconn" width="16" height="16">
+                  <use href="#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-itemm">
+              <a href="" class="icon-linkk">
+                <svg class="iconn" width="16" height="16">
+                  <use href="#twit"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-itemm">
+              <a href="" class="icon-linkk">
+                <svg class="iconn" width="16" height="16">
+                  <use href="#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-itemm">
+              <a href="" class="icon-linkk">
+                <svg class="iconn" width="16" height="16">
+                  <use href="#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
           <li class="bak"><img src="./images/img3.jpg" width="264" alt="men 3"> 
           <div class="employee-info">
           <h3 class="titlee">Camila Garcia</h3> 
           <p class="team-p">Marketing</p> </div> </li> 
+          <ul class="icon-listt">
+            <li class="icon-itemm">
+              <a href="" class="icon-linkk">
+                <svg class="iconn" width="16" height="16">
+                  <use href="#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-itemm">
+              <a href="" class="icon-linkk">
+                <svg class="iconn" width="16" height="16">
+                  <use href="#twit"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-itemm">
+              <a href="" class="icon-linkk">
+                <svg class="iconn" width="16" height="16">
+                  <use href="#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-itemm">
+              <a href="" class="icon-linkk">
+                <svg class="iconn" width="16" height="16">
+                  <use href="#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
           <li class="bak"><img src="./images/img4.jpg" width="264" alt="women"> 
           <div class="employee-info">
           <h3 class="titlee">Daniel Wilson</h3> 
           <p class="team-p">UI Designer</p> </div> </li> 
          </ul>
-
+<ul class="icon-listt">
+  <li class="icon-itemm">
+    <a href="" class="icon-linkk">
+      <svg class="iconn" width="16" height="16">
+        <use href="#instagram"></use>
+      </svg>
+    </a>
+  </li>
+  <li class="icon-itemm">
+    <a href="" class="icon-linkk">
+      <svg class="iconn" width="16" height="16">
+        <use href="#twit"></use>
+      </svg>
+    </a>
+  </li>
+  <li class="icon-itemm">
+    <a href="" class="icon-linkk">
+      <svg class="iconn" width="16" height="16">
+        <use href="#facebook"></use>
+      </svg>
+    </a>
+  </li>
+  <li class="icon-itemm">
+    <a href="" class="icon-linkk">
+      <svg class="iconn" width="16" height="16">
+        <use href="#linkedin"></use>
+      </svg>
+    </a>
+  </li>
+</ul>
           
          </div>
         </section>
