--- a/index.html
+++ b/index.html
@@ -49,6 +49,23 @@
         <p class="middle">Our goal is to identify the business problem to walk away with the perfect and creative solution.
         </p>
         </li>
+        <div class="container-icon">
+          <li>
+         <svg class="antena" width="64" height="64">
+        <symbol id="antena" viewBox="0 0 32 32">
+        <path fill="#f4f4fd"
+          d="M16.059 7.783c-4.538 0-8.22 3.682-8.22 8.22s3.682 8.22 8.22 8.22 8.22-3.682 8.22-8.22-3.682-8.22-8.22-8.22zm0 13.552a5.333 5.333 0 0 1 0-10.664 5.333 5.333 0 0 1 0 10.664zM26.524 7.458a1.919 1.919 0 1 1-3.838 0 1.919 1.919 0 0 1 3.838 0z" />
+        </svg>
+        </symbol>
+          <ul class="icon-antena">
+            <li class="icon-anten">
+              <a href="" class="icon-link-antena">
+                <svg class="icon" width="64" height="64">
+                  <use href="#antena"></use>
+                </svg>
+              </a>
+            </li>
+        </div>
         <li class="lii">
         <h3 class="title">Punctuality</h3>
         <p class="middle">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
