--- a/index.html
+++ b/index.html
@@ -45,36 +45,51 @@
            <h2 class="visually-hidden">Solutions</h2>
            <ul class="centero">
             <li class="lii">
+              <div class="container-icon">
+                <ul class="icon-astr">
+                  <li class="icon-anten">
+                    <svg class="antena" width="64" height="64">
+                      <use href="./images/icons.svg.svg#icon-antenna-1"></use>
+                    </svg>
+                  </li>
+              </div>
         <h3 class="title">Strategy</h3>
         <p class="middle">Our goal is to identify the business problem to walk away with the perfect and creative solution.
         </p>
         </li>
-        <div class="container-icon">
-          <li>
-         <svg class="antena" width="64" height="64">
-        <symbol id="antena" viewBox="0 0 32 32">
-        <path fill="#f4f4fd"
-          d="M16.059 7.783c-4.538 0-8.22 3.682-8.22 8.22s3.682 8.22 8.22 8.22 8.22-3.682 8.22-8.22-3.682-8.22-8.22-8.22zm0 13.552a5.333 5.333 0 0 1 0-10.664 5.333 5.333 0 0 1 0 10.664zM26.524 7.458a1.919 1.919 0 1 1-3.838 0 1.919 1.919 0 0 1 3.838 0z" />
-        </svg>
-        </symbol>
-          <ul class="icon-antena">
-            <li class="icon-anten">
-              <a href="" class="icon-link-antena">
-                <svg class="icon" width="64" height="64">
-                  <use href="#antena"></use>
-                </svg>
-              </a>
-            </li>
-        </div>
         <li class="lii">
+          <div class="container-icon">
+            <ul class="icon-astr">
+              <li class="icon-anten">
+                <svg class="antena" width="64" height="64">
+                  <use href="./images/icons.svg.svg#icon-clock-1"></use>
+                </svg>
+              </li>
+          </div>
         <h3 class="title">Punctuality</h3>
         <p class="middle">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
         <li class="lii">
+          <div class="container-icon">
+            <ul class="icon-astr">
+              <li class="icon-anten">
+                <svg class="antena" width="64" height="64">
+                  <use href="./images/icons.svg.svg#icon-diagram-1"></use>
+                </svg>
+              </li>
+          </div>
         <h3 class="title">Diligence</h3>
          <p class="middle">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
         <li class="lii">
+          <div class="container-icon">
+            <ul class="icon-astr">
+              <li class="icon-anten">
+                <svg class="antena" width="64" height="64">
+                  <use href="./images/icons.svg.svg#icon-astronaut-1"></use>
+                </svg>
+              </li>
+          </div>
         <h3 class="title">Technologies</h3>
          <p class="middle">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
           </li>
@@ -89,161 +104,167 @@
           <div class="employee-info">
           <h3 class="titlee">Mark Guerrero</h3> 
           <p class="team-p">Product Designer</p> </div> </li>
-          <ul class="icon-listt">
-            <li class="icon-itemm">
-              <a href="" class="icon-linkk">
-                <svg class="iconn" width="16" height="16">
-                  <use href="#instagram"></use>
+          <div class="container-iconn">
+            <ul class="icon-list">
+              <li class="icon-item">
+                <a href="" class="icon-link">
+                  <svg class="antena" width="16" height="16">
+                    <use href="./images/icons.svg.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+          </div>
+          <div class="container-iconn">
+            <li class="icon-item">
+              <a href="" class="icon-link">
+                <svg class="antena" width="16" height="16">
+                  <use href="./images/icons.svg.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-itemm">
-              <a href="" class="icon-linkk">
-                <svg class="iconn" width="16" height="16">
-                  <use href="#twit"></use>
-                </svg>
-               </a>
-            </li>
-            <li class="icon-itemm">
-              <a href="" class="icon-linkk">
-                <svg class="iconn" width="16" height="16">
-                  <use href="#facebook"></use>
+          </div>
+          <div class="container-iconn">
+            <li class="icon-item">
+              <a href="" class="icon-link">
+                <svg class="antena" width="16" height="16">
+                  <use href="./images/icons.svg.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-itemm">
-              <a href="" class="icon-linkk">
-                <svg class="iconn" width="16" height="16">
-                  <use href="#linkedin"></use>
-                </svg>
-              </a>
-            </li>
+          </div>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+          </div>
           </ul>
           <li class="bak"><img src="./images/img2.jpg" width="264" alt="men 2"> 
           <div class="employee-info">
           <h3 class="titlee">Tom Ford</h3> 
           <p class="team-p">Frontend Developer</p> </div> </li>
-          <ul class="icon-listt">
-            <li class="icon-itemm">
-              <a href="" class="icon-linkk">
-                <svg class="iconn" width="16" height="16">
-                  <use href="#instagram"></use>
+          <div class="container-icon">
+            <ul class="icon-list">
+              <li class="icon-item">
+                <a href="" class="icon-link">
+                  <svg class="antena" width="16" height="16">
+                    <use href="./images/icons.svg.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+          </div>
+          <div class="container-icon">
+            <li class="icon-item">
+              <a href="" class="icon-link">
+                <svg class="antena" width="16" height="16">
+                  <use href="./images/icons.svg.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-itemm">
-              <a href="" class="icon-linkk">
-                <svg class="iconn" width="16" height="16">
-                  <use href="#twit"></use>
+          </div>
+          <div class="container-icon">
+            <li class="icon-item">
+              <a href="" class="icon-link">
+                <svg class="antena" width="16" height="16">
+                  <use href="./images/icons.svg.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-itemm">
-              <a href="" class="icon-linkk">
-                <svg class="iconn" width="16" height="16">
-                  <use href="#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="icon-itemm">
-              <a href="" class="icon-linkk">
-                <svg class="iconn" width="16" height="16">
-                  <use href="#linkedin"></use>
-                </svg>
-              </a>
-            </li>
+          </div>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+          </div>
           </ul>
           <li class="bak"><img src="./images/img3.jpg" width="264" alt="men 3"> 
           <div class="employee-info">
           <h3 class="titlee">Camila Garcia</h3> 
           <p class="team-p">Marketing</p> </div> </li> 
-          <ul class="icon-listt">
-            <li class="icon-itemm">
-              <a href="" class="icon-linkk">
-                <svg class="iconn" width="16" height="16">
-                  <use href="#instagram"></use>
+          <div class="container-icon">
+            <ul class="icon-list">
+              <li class="icon-item">
+                <a href="" class="icon-link">
+                  <svg class="antena" width="16" height="16">
+                    <use href="./images/icons.svg.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+          </div>
+          <div class="container-icon">
+            <li class="icon-item">
+              <a href="" class="icon-link">
+                <svg class="antena" width="16" height="16">
+                  <use href="./images/icons.svg.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-itemm">
-              <a href="" class="icon-linkk">
-                <svg class="iconn" width="16" height="16">
-                  <use href="#twit"></use>
+          </div>
+          <div class="container-icon">
+            <li class="icon-item">
+              <a href="" class="icon-link">
+                <svg class="antena" width="16" height="16">
+                  <use href="./images/icons.svg.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-itemm">
-              <a href="" class="icon-linkk">
-                <svg class="iconn" width="16" height="16">
-                  <use href="#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="icon-itemm">
-              <a href="" class="icon-linkk">
-                <svg class="iconn" width="16" height="16">
-                  <use href="#linkedin"></use>
-                </svg>
-              </a>
-            </li>
+          </div>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+          </div>
           </ul>
           <li class="bak"><img src="./images/img4.jpg" width="264" alt="women"> 
           <div class="employee-info">
           <h3 class="titlee">Daniel Wilson</h3> 
           <p class="team-p">UI Designer</p> </div> </li> 
          </ul>
-<ul class="icon-listt">
-  <li class="icon-itemm">
-    <a href="" class="icon-linkk">
-      <svg class="iconn" width="16" height="16">
-        <use href="#instagram"></use>
+<div class="container-icon">
+  <ul class="icon-list">
+    <li class="icon-item">
+      <a href="" class="icon-link">
+        <svg class="antena" width="16" height="16">
+          <use href="./images/icons.svg.svg#icon-instagram-2"></use>
+        </svg>
+      </a>
+    </li>
+</div>
+<div class="container-icon">
+  <li class="icon-item">
+    <a href="" class="icon-link">
+      <svg class="antena" width="16" height="16">
+        <use href="./images/icons.svg.svg#icon-twitter-1"></use>
       </svg>
     </a>
   </li>
-  <li class="icon-itemm">
-    <a href="" class="icon-linkk">
-      <svg class="iconn" width="16" height="16">
-        <use href="#twit"></use>
+</div>
+<div class="container-icon">
+  <li class="icon-item">
+    <a href="" class="icon-link">
+      <svg class="antena" width="16" height="16">
+        <use href="./images/icons.svg.svg#icon-facebook-1"></use>
       </svg>
     </a>
   </li>
-  <li class="icon-itemm">
-    <a href="" class="icon-linkk">
-      <svg class="iconn" width="16" height="16">
-        <use href="#facebook"></use>
-      </svg>
-    </a>
-  </li>
-  <li class="icon-itemm">
-    <a href="" class="icon-linkk">
-      <svg class="iconn" width="16" height="16">
-        <use href="#linkedin"></use>
-      </svg>
-    </a>
-  </li>
+</div>
+<li class="icon-item">
+  <a href="" class="icon-link">
+    <svg class="antena" width="16" height="16">
+      <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
+    </svg>
+  </a>
+</li>
+</div>
 </ul>
-          
-         </div>
-        </section>
-          <section class="portfolio">
-            <div class="container">
-        <h2 class="teamul">Our Portfolio</h2>
-        <ul class="center">
-          <li class="forty"><img src="./images/img5.jpg" width="360" alt="men 1">
-            <div class="app-info">
-            <h3 class="name">Banking App</h3>
-            <p class="team-pp">App</p></div>
-          </li>
-          <li class="forty"><img src="./images/img6.jpg" width="360" alt="men 2">
-            <div class="app-info">
-            <h3 class="name">Cashless Payment</h3>
-            <p class="team-pp">Marketing</p></div>
-          </li>
-            <li class="forty"><img src="./images/img7.jpg" width="360" alt="men 3">
-            <div class="app-info">
-            <h3 class="name">Meditation App</h3>
-            <p class="team-pp">App</p></div>
-          </li>
           <li class="forty"><img src="./images/img8.jpg" width="360" alt="women">
             <div class="app-info">
             <h3 class="name">Taxi Service</h3>
@@ -264,68 +285,47 @@
         </section>
        </main>
        <footer class="footer">
-        <div class="container footer-container">
         <div class="container">
         <a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
           <p class="text-footer-soc">Social media</p>
-          <svg aria-hidden="true" style="position:absolute;width:0;height:0" xmlns="http://www.w3.org/2000/svg" overflow="hidden">
-          <defs>
-           <!-- instagram -->
-          <symbol id="instagram" viewBox="0 0 32 32">
-            <path
-              d="M31.969 9.408c-.075-1.7-.35-2.869-.744-3.882a7.803 7.803 0 0 0-1.85-2.838A7.867 7.867 0 0 0 26.543.844C25.524.45 24.361.175 22.661.1 20.948.019 20.404 0 16.06 0s-4.888.019-6.595.094c-1.7.075-2.869.35-3.882.744a7.803 7.803 0 0 0-2.838 1.85A7.867 7.867 0 0 0 .901 5.52C.507 6.539.232 7.702.157 9.402c-.081 1.713-.1 2.257-.1 6.601s.019 4.888.094 6.595c.075 1.7.35 2.869.744 3.882a7.895 7.895 0 0 0 1.85 2.838 7.867 7.867 0 0 0 2.832 1.844c1.019.394 2.182.669 3.882.744 1.706.075 2.25.094 6.595.094s4.888-.019 6.595-.094c1.7-.075 2.869-.35 3.882-.744a8.181 8.181 0 0 0 4.682-4.682c.394-1.019.669-2.182.744-3.882.075-1.707.094-2.25.094-6.595s-.006-4.888-.081-6.595zm-2.882 13.065c-.069 1.563-.331 2.407-.55 2.969a5.31 5.31 0 0 1-3.038 3.038c-.563.219-1.413.481-2.969.55-1.688.075-2.194.094-6.464.094s-4.782-.019-6.464-.094c-1.563-.069-2.407-.331-2.969-.55a4.926 4.926 0 0 1-1.838-1.194 4.974 4.974 0 0 1-1.194-1.838c-.219-.563-.481-1.413-.55-2.969-.075-1.688-.094-2.194-.094-6.464s.019-4.782.094-6.464c.069-1.563.331-2.407.55-2.969a4.868 4.868 0 0 1 1.2-1.838A4.974 4.974 0 0 1 6.639 3.55c.563-.219 1.413-.481 2.969-.55 1.688-.075 2.194-.094 6.464-.094 4.276 0 4.782.019 6.464.094 1.563.069 2.407.331 2.969.55a4.914 4.914 0 0 1 1.838 1.194 4.974 4.974 0 0 1 1.194 1.838c.219.563.481 1.413.55 2.969.075 1.688.094 2.194.094 6.464s-.019 4.77-.094 6.458z" />
-            <path d="M16.059 7.783c-4.538 0-8.22 3.682-8.22 8.22s3.682 8.22 8.22 8.22 8.22-3.682 8.22-8.22-3.682-8.22-8.22-8.22zm0
-                    13.552a5.333 5.333 0 0 1 0-10.664 5.333 5.333 0 0 1 0 10.664zM26.524 7.458a1.919 1.919 0 1 1-3.838 0 1.919 1.919 0 0 1
-                    3.838 0z" />
-          </symbol>
-            <!--  twit -->
-          <symbol id="twit" viewBox="0 0 32 32">
-            <path
-              d="M32 6.078c-1.19.522-2.458.868-3.78 1.036a6.523 6.523 0 0 0 2.886-3.626 13.11 13.11 0 0 1-4.16 1.588A6.574 6.574 0 0 0 22.154 3c-3.632 0-6.556 2.948-6.556 6.562 0 .52.044 1.02.152 1.496-5.454-.266-10.28-2.88-13.522-6.862a6.605 6.605 0 0 0-.898 3.316 6.57 6.57 0 0 0 2.914 5.452 6.479 6.479 0 0 1-2.964-.808v.072c0 3.188 2.274 5.836 5.256 6.446a6.548 6.548 0 0 1-1.72.216 5.8 5.8 0 0 1-1.242-.112c.85 2.598 3.262 4.508 6.13 4.57a13.182 13.182 0 0 1-8.134 2.798c-.538 0-1.054-.024-1.57-.09A18.469 18.469 0 0 0 10.064 29c12.072 0 18.672-10 18.672-18.668 0-.29-.01-.57-.024-.848A13.087 13.087 0 0 0 32 6.078z" />
-           </symbol>
-           
-            <!--  linkedin -->
-            <symbol id="linkedin" viewBox="0 0 32 32">
-              <path d="M21.329 5.313h2.921V.225C23.746.156 22.013 0 19.994 0c-4.212 0-7.097 2.649-7.097 7.519V12H8.249v5.688h4.648V32h5.699V17.689h4.46l.708-5.688h-5.169V8.082c.001-1.644.444-2.769 2.735-2.769z" />
-            </symbol>
-            <!--  facebook -->
-            <symbol id="facebook" viewBox="0 0 32 32">
-              <path
-                d="M31.992 32v-.001H32V20.263c0-5.741-1.236-10.164-7.948-10.164-3.227 0-5.392 1.771-6.276 3.449h-.093v-2.913h-6.364v21.364h6.627V21.42c0-2.785.528-5.479 3.977-5.479 3.399 0 3.449 3.179 3.449 5.657v10.401h6.62zM.528 10.636h6.635V32H.528V10.636zM3.843 0C1.722 0 0 1.721 0 3.843s1.721 3.879 3.843 3.879c2.121 0 3.843-1.757 3.843-3.879A3.846 3.846 0 0 0 3.843 0z" />
-            </symbol>
-            </defs>
-           </svg>
+          <div class="container-icon">
             <ul class="icon-list">
+              <li class="icon-item">
+                <a href="" class="icon-link">
+                <svg class="antena" width="24" height="24">
+                  <use href="./images/icons.svg.svg#icon-instagram-2"></use>
+                </svg>
+                </a>
+              </li>
+          </div>
+          <div class="container-icon">
+              <li class="icon-item">
+              <a href="" class="icon-link">
+                <svg class="antena" width="24" height="24">
+                  <use href="./images/icons.svg.svg#icon-twitter-1"></use>
+                </svg>
+                </a>
+              </li>
+          </div>
+          <div class="container-icon">
+              <li class="icon-item">
+                <a href="" class="icon-link">
+                <svg class="antena" width="24" height="24">
+                  <use href="./images/icons.svg.svg#icon-facebook-1"></use>
+                </svg>
+                </a>
+              </li>
+          </div>
           <li class="icon-item">
             <a href="" class="icon-link">
-              <svg class="icon" width="24" height="24">
-              <use href="#instagram"></use>
-            </svg>
-            </a>
-          </li>
-          <li class="icon-item">
-            <a href="" class="icon-link">
-            <svg class="icon" width="24" height="24">
-              <use href="#twit"></use>
-            </svg>
-            </a>
-          </li>
-          <li class="icon-item">
-            <a href="" class="icon-link">
-            <svg class="icon" width="24" height="24">
-              <use href="#facebook"></use>
-            </svg>
-            </a>
-          </li>
-          <li class="icon-item">
-            <a href="" class="icon-link">
-            <svg class="icon" width="24" height="24">
-              <use href="#linkedin"></use>
-            </svg>
-            </a>
-          </li>
+              <svg class="antena" width="24" height="24">
+                <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
+              </svg>
+              </a>
+            </li>
+             </div>
           </ul>
           </div>
       </footer>
