--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="employee-info">
           <h3 class="titlee">Mark Guerrero</h3> 
           <p class="team-p">Product Designer</p> </div> </li>
-          <div class="container-iconn">
+          <div class="container-icon">
             <ul class="icon-list">
               <li class="icon-item">
                 <a href="" class="icon-link">
@@ -114,7 +114,7 @@
                 </a>
               </li>
           </div>
-          <div class="container-iconn">
+          <div class="container-icon">
             <li class="icon-item">
               <a href="" class="icon-link">
                 <svg class="antena" width="16" height="16">
@@ -123,7 +123,7 @@
               </a>
             </li>
           </div>
-          <div class="container-iconn">
+          <div class="container-icon">
             <li class="icon-item">
               <a href="" class="icon-link">
                 <svg class="antena" width="16" height="16">
@@ -223,48 +223,70 @@
           </li>
           </div>
           </ul>
-          <li class="bak"><img src="./images/img4.jpg" width="264" alt="women"> 
-          <div class="employee-info">
-          <h3 class="titlee">Daniel Wilson</h3> 
-          <p class="team-p">UI Designer</p> </div> </li> 
-         </ul>
-<div class="container-icon">
-  <ul class="icon-list">
-    <li class="icon-item">
-      <a href="" class="icon-link">
-        <svg class="antena" width="16" height="16">
-          <use href="./images/icons.svg.svg#icon-instagram-2"></use>
-        </svg>
-      </a>
-    </li>
-</div>
-<div class="container-icon">
-  <li class="icon-item">
-    <a href="" class="icon-link">
-      <svg class="antena" width="16" height="16">
-        <use href="./images/icons.svg.svg#icon-twitter-1"></use>
-      </svg>
-    </a>
-  </li>
-</div>
-<div class="container-icon">
-  <li class="icon-item">
-    <a href="" class="icon-link">
-      <svg class="antena" width="16" height="16">
-        <use href="./images/icons.svg.svg#icon-facebook-1"></use>
-      </svg>
-    </a>
-  </li>
-</div>
-<li class="icon-item">
-  <a href="" class="icon-link">
-    <svg class="antena" width="16" height="16">
-      <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
-    </svg>
-  </a>
-</li>
-</div>
-</ul>
+          <li class="bak"><img src="./images/img4.jpg" width="264" alt="women">
+            <div class="employee-info">
+              <h3 class="titlee">Daniel Wilson</h3>
+              <p class="team-p">UI Designer</p>
+              <div class="container-icon">
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="antena" width="16" height="16">
+                        <use href="./images/icons.svg.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+              </div>
+              <div class="container-icon">
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="antena" width="16" height="16">
+                      <use href="./images/icons.svg.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </div>
+              <div class="container-icon">
+                <li class="icon-item">
+                  <a href="" class="icon-link">
+                    <svg class="antena" width="16" height="16">
+                      <use href="./images/icons.svg.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </div>
+              <li class="icon-item">
+                <a href="" class="icon-link">
+                  <svg class="antena" width="16" height="16">
+                    <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+              </div>
+              </ul>
+            </div>
+          </li>
+          </ul>
+          </section>
+          <section class="portfolio">
+            <div class="container">
+        <h2 class="teamul">Our Portfolio</h2>
+        <ul class="center">
+          <li class="forty"><img src="./images/img5.jpg" width="360" alt="men 1">
+            <div class="app-info">
+            <h3 class="name">Banking App</h3>
+            <p class="team-pp">App</p></div>
+          </li>
+          <li class="forty"><img src="./images/img6.jpg" width="360" alt="men 2">
+            <div class="app-info">
+            <h3 class="name">Cashless Payment</h3>
+            <p class="team-pp">Marketing</p></div>
+          </li>
+            <li class="forty"><img src="./images/img7.jpg" width="360" alt="men 3">
+            <div class="app-info">
+            <h3 class="name">Meditation App</h3>
+            <p class="team-pp">App</p></div>
+          </li>
           <li class="forty"><img src="./images/img8.jpg" width="360" alt="women">
             <div class="app-info">
             <h3 class="name">Taxi Service</h3>
