--- a/index.html
+++ b/index.html
@@ -284,40 +284,41 @@
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
           <p class="text-footer-soc">Social media</p>
-          <div class="container-icon">
-            <ul class="icon-list">
+          <ul class="icon-list">
               <li class="icon-item">
-                <a href="" class="icon-link">
+                <div class="container-footer">
+                <a href="" class="icon-linkd">
                 <svg class="antena" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
                 </a>
               </li>
           </div>
-          <div class="container-icon">
-              <li class="icon-item">
-              <a href="" class="icon-link">
+          <li class="icon-item">
+                <div class="container-footer">
+              <a href="" class="icon-linkd">
                 <svg class="antena" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
                 </a>
               </li>
-              <li class="icon-item">
-                <a href="" class="icon-link">
+              <li class="icon-footer">
+                <div class="container-icon">
+                <a href="" class="icon-linkd">
                 <svg class="antena" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
                 </a>
               </li>
           <li class="icon-item">
-            <a href="" class="icon-link">
+            <div class="container-footer">
+            <a href="" class="icon-linkd">
               <svg class="antena" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
               </a>
             </li>
-          </ul>
-          </div>
+        </div>
       </footer>
      </body>
      </html>
