--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         </section>
        </main>
        <footer class="footer">
-        <div class="container">
+        <div class="container-bottom">
         <a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
