--- a/index.html
+++ b/index.html
@@ -278,13 +278,10 @@
         </div>
         </section>
        </main>
-       <footer class="footer">
-        <div class="container-bottom">
-        <a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
-        <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div>
-          <p class="text-footer-soc">Social media</p>
-          <ul class="icon-list">
+text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</div>
+<p class="text-footer-soc">Social media</p>
+<ul class="icon-bottom">
               <li class="icon-item">
                 <div class="container-footer">
                 <a href="" class="icon-linkd">
@@ -302,7 +299,7 @@
                 </svg>
                 </a>
               </li>
-              <li class="icon-footer">
+              <li class="icon-item">
                 <div class="container-icon">
                 <a href="" class="icon-linkd">
                 <svg class="antena" width="24" height="24">
