--- a/index.html
+++ b/index.html
@@ -278,10 +278,14 @@
         </div>
         </section>
        </main>
-text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-</div>
-<p class="text-footer-soc">Social media</p>
-<ul class="icon-bottom">
+<footer class="footer">
+  <div class="footer-content">
+    <a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
+    <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth
+      solutions.</p>
+  </div>
+  <p class="text-footer-soc">Social media</p>
+  <ul class="icon-bottom">
               <li class="icon-item">
                 <div class="container-footer">
                 <a href="" class="icon-linkd">
