--- a/index.html
+++ b/index.html
@@ -288,12 +288,13 @@
   </main>
   <footer class="footer">
     <div class="container-footer">
-      <a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
+      <div><a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
       <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.</p>
-    
+    </div>
+    <div>
     <p class="text-footer-soc">Social media</p>
-    <ul class="icon-list">
+    <ul class="icon-list-foot">
       <li class="icon-item-footer">
 
         <a href="" class="icon-linkd">
@@ -328,6 +329,7 @@
         </a>
       </li>
     </ul>
+    </div>
     </div>
   </footer>
 </body>
