--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       <div class="container">
         <h2 class="teamul">Our Team</h2>
       </div>
+      <div>
         <ul class="centerr">
           <li class="bak">
             <img src="./images/img1.jpg" width="264" alt="men 1">
@@ -242,6 +243,7 @@
               </li>
             </ul>
             </ul>
+            </div>
     </section>
     <section class="portfolio">
       <div class="container">
